--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: projetb2c
+name: messagerie_flutter
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -39,7 +39,9 @@ dependencies:
   cloud_firestore: ^3.1.10
   firebase_storage: ^10.2.9
   file_picker: ^4.5.1
-
+  splashscreen: ^1.3.5
+  flutter_signin_button: ^2.0.0
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - google_fonts/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
