--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   file_picker: ^4.5.1
   splashscreen: ^1.3.5
   google_fonts: ^2.3.1
+  flutter_tindercard: ^0.1.7
+  flutter_swipable: ^1.2.1
 
 dev_dependencies:
   flutter_test:
