messagerie ok, discover bug?

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_fonts: ^2.3.1
   flutter_tindercard: ^0.1.7
   flutter_swipable: ^1.2.1
+  flutter_spinkit: ^5.0.0
+  image_picker: 0.7.4
+  fluttertoast: 8.0.6
 
 dev_dependencies:
   flutter_test:
